# search-engine

./: Cargo.toml  README.md
src/: indexer.rs  main.rs  normalize.rs  parser.rs  search.rs  server.rs
