[package]
name = "rust_search_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.3"
scraper = "0.14"
regex = "1"
unicode-normalization = "0.1"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
actix-web = "4"
tokio = { version = "1", features = ["rt-multi-thread","macros"] }
chrono = "0.4"
once_cell = "1.19"
lazy_static = "1.4"
clap = { version = "4.1", features = ["derive"] }
anyhow = "1.0"
html-escape = "0.2"
